--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "adoyenodejs",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.js","type":"module",
   "scripts": {
+    "start": "node index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
