--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "adoyenodejs",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js","type":"module",
+  "main": "index.js",
   "scripts": {
-    "start": "node index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
