--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cjs-loader": "^0.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "firebase": "^9.19.1",
